<resources>
    <string name="app_name">Totara LMS</string>
    <string name="login">Log in</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="ok">OK</string>
    <string name="registerbtn">Start</string>
    <string name="onClickOK">void</string>
    <string name="success">Success!</string>
    <string name="ioerror">IO Error!</string>
    <string name="protocolerror">Protocol Error!</string>
    <string name="malformederror">Malformed Error!</string>
    <string name="unsuccessfull">Unsuccessful</string>
    <string name="description">Description</string>
    <string name="fullanme">Fullname</string>
    <string name="id">ID</string>
    <string name="subject">Subject</string>
    <string name="selectsubject">Select subject</string>
    <string name="invalidusernamepassword">Invalid username or password</string>
</resources>
